Specular highlight turns object black on some studio lights. #79184

Closed
opened 2020-07-23 10:03:42 +02:00 by Blake · 19 comments

System Information
Operating system: Linux-5.7.9-arch1-1-x86_64-with-arch-Arch-Linux 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.57

Blender Version
Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-07-23 02:23, hash: 4b31f4ace7
Worked: version: 2.90.0 Beta, branch: master, commit date: 2020-07-22 14:02, hash: 0e280b96ca

Short description of error
Specular highlight turns object black on some studio lights.
2020-07-23_10-58-35.mp4

Exact steps for others to reproduce the error

  • In the Viewport Shading options, choose any of the 3 latest "Studiolight" options
**System Information** Operating system: Linux-5.7.9-arch1-1-x86_64-with-arch-Arch-Linux 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.57 **Blender Version** Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-07-23 02:23, hash: `4b31f4ace7` Worked: version: 2.90.0 Beta, branch: master, commit date: 2020-07-22 14:02, hash: `0e280b96ca` **Short description of error** Specular highlight turns object black on some studio lights. [2020-07-23_10-58-35.mp4](https://archive.blender.org/developer/F8715388/2020-07-23_10-58-35.mp4) **Exact steps for others to reproduce the error** - In the `Viewport Shading` options, choose any of the 3 latest "Studiolight" options
Author

Added subscriber: @dearzhen

Added subscriber: @dearzhen

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Author

I want to make some update on this bug.
It appears only when I build blender using precompiled libraries. I dont't have this bug with Automatic Dependency Installation or download from https://builder.blender.org/download/

Thanks!

I want to make some update on this bug. It appears only when I build blender using precompiled libraries. I dont't have this bug with Automatic Dependency Installation or download from https://builder.blender.org/download/ Thanks!

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-07-29 17:02:13 +02:00

I reproduced this bug in the informed build, but not the latest daily build, so it appears the bug has been fixed already.

Thanks for the info.

Closing.

I reproduced this bug in the informed build, but not the latest daily build, so it appears the bug has been fixed already. Thanks for the info. Closing.
Author

Unfortunately, I still have this issue on when building with precompiled libraries.

Unfortunately, I still have this issue on when building with precompiled libraries.
Author

@mano-wii
Also, I've noticed that if I set 'Clip start' setting above 0.015 m object will not be dark anymore.
Hope that helps.
Thanks!

@mano-wii Also, I've noticed that if I set 'Clip start' setting above 0.015 m object will not be dark anymore. Hope that helps. Thanks!

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

I can confirm.
It is not seen in a Release build.

I can confirm. It is not seen in a Release build.
Author

I can't reproduce this bug in latest build. Hopefully this bug has been fixed.
But custom studio lights appears to be broken.
Thanks!

2020-09-11 15-26-25.mp4

I can't reproduce this bug in latest build. Hopefully this bug has been fixed. But custom studio lights appears to be broken. Thanks! [2020-09-11 15-26-25.mp4](https://archive.blender.org/developer/F8865236/2020-09-11_15-26-25.mp4)

Added subscriber: @fclem

Added subscriber: @fclem

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

I cannot reproduce on linux nor on MacOS. Maybe it's a windows thing? Do you have any error when running with --debug-gpu ? Is this still using precompiled lib and debug build?

I cannot reproduce on linux nor on MacOS. Maybe it's a windows thing? Do you have any error when running with `--debug-gpu` ? Is this still using precompiled lib and debug build?
Author

I am on Arch Linux. I've attached errors that I have when I am running with --debug-gpu. This happens with precompiled libs on make release version.
I can't reproduce this with debug build.

errors.txt

2020-09-19 17-05-37.mp4

I am on Arch Linux. I've attached errors that I have when I am running with --debug-gpu. This happens with precompiled libs on make release version. I can't reproduce this with debug build. [errors.txt](https://archive.blender.org/developer/F8899409/errors.txt) [2020-09-19 17-05-37.mp4](https://archive.blender.org/developer/F8899408/2020-09-19_17-05-37.mp4)

In venturing into Renderdoc, I found that the problem is the value of world_data.lights- [x].diffuse_color_wrap.a used in the get_world_lighting function (workbench_world_light_lib.glsl$46 ).
Its value is -65504.0
Thus:

  • wrap.w is -65504.0
  • then gloss.w 65504.0
  • then shininess.w INF
  • then spec_light.w nan
  • then specular_light nan, nan, nan
  • and so on...

I don't know what this world_data.lights- [x].diffuse_color_wrap.a is and where its value is obtained.

In venturing into Renderdoc, I found that the problem is the value of `world_data.lights- [x].diffuse_color_wrap.a` used in the `get_world_lighting` function ([workbench_world_light_lib.glsl$46 ](https://developer.blender.org/diffusion/B/browse/master/source/blender/draw/engines/workbench/shaders/workbench_world_light_lib.glsl$46)). Its value is `-65504.0` Thus: - `wrap.w` is `-65504.0` - then `gloss.w` `65504.0` - then `shininess.w` `INF` - then `spec_light.w` `nan` - then `specular_light` `nan, nan, nan` - and so on... I don't know what this `world_data.lights- [x].diffuse_color_wrap.a` is and where its value is obtained.

@mano-wii does this fix the problem? https://developer.blender.org/P1687

@mano-wii does this fix the problem? https://developer.blender.org/P1687

This issue was referenced by a81b059f1d

This issue was referenced by a81b059f1d9cce8dbcfea90f3a618c2da7e09c8e

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79184
No description provided.