Fix T79184: Specular highlight turns object black on some studio lights

This case was leaving some data uninitialized, producing some NaNs in the
fragment shader.